crates/config/src/snapshots/config__config_document__tests__patched_writes@minimal_sections.snap
---
source: crates/config/src/config_document.rs
expression: out
---
theme = "dark"

[audio]
crossfade = "3s"
