crates/config/src/snapshots/config__config_document__tests__patched_writes@one_field.snap
---
source: crates/config/src/config_document.rs
expression: out
---
# sifr config
music_dir = "/music" # where my library lives
theme = "auto"
volume = 50

[audio]
# gapless by default; bump this for a crossfade
crossfade = "3s"
replaygain = false
sleep_presets = [15, 30, 60]
